# sports

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bumpversion.cfg  pyproject.toml
.circleci/: config.yml
docker/: Dockerfile  Dockerfile-ci-tests  Dockerfile-local
docker-compose/: ci-test.yaml  local.yaml  main.yaml  test.yaml
docker/ci-test/: Dockerfile
docker/local/: Dockerfile
docker/main/: Dockerfile
integration_tests/sports/operations/download/fox_sports/: test_orchestrator.py
sports/: __init__.py
sports/cli/: __init__.py  fox_sports.py
sports/data_feeds/: __init__.py
sports/data_feeds/data_lake/: fox-sports-cbb.yaml  fox-sports-mlb.yaml  fox-sports-nba.yaml
sports/operations/: container.py  orchestrator.py  relations.py  requests.py  validations.py
sports/operations/download/fox_sports/: __init__.py  data_containers.py  extractors.py  orchestrator.py  relationships.py
sports/operations/download/fox_sports/transformations/: __init__.py  (+11 more)
sports/operations/utils/: __init__.py
sports/providers/fox_sports/feeds/: __init__.py  _base.py  advanced_player_stats.py  fox_odds.py  fox_projections.py  matchup_team_leader_stats.py  matchup_team_stats.py  matchups.py  player_stats.py  team_player_stats.py  team_roster.py  team_stats.py
sports/shared/: container.py  file.py  serde.py  utils.py
sports/shared/operators/: __init__.py
tests/sports/operations/: test_container.py
tests/sports/shared/: test_container.py  test_file.py  test_serde.py
tests/sports/shared/operators/: test_Archiver.py
